@@ -5,6 +5,7 @@
   * Added #image_elements to ElementLocators
   * Added #form_elements to ElementLocators
   * Added #list_item_elements to ElementLocators
+  * Added #unordered_list_elements to ElementLocators
 === 2016-12-12
 * Enhancements
   * Added #hidden_field_elements to ElementLocators
